--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^7.14.1",
     "@mantine/hooks": "^7.14.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "^22.9.0",
     "axios": "^1.7.7",
